# worldgen-2d-jigsaw-playground

./: CMakeLists.txt  README.MD  build.cmd  conanfile.txt
res/misc/: chain.json  support-soil.json
res/pools/: empty.json
res/pools/misc/: support.json
res/pools/shaft/: basic.json  ends.json  no-intersection.json  straight.json  turns.json
res/room/: base.json
res/shaft/: horizontal.json  vertical.json
res/shaft/end/: bottom.json  left.json  right.json  top.json
res/shaft/junction/: all.json  right-bottom-left.json
res/shaft/turn/: top-left.json
res/structures/: empty.json
res/structures/misc/: chain.json  support-soil.json
res/structures/room/: base.json
res/structures/shaft/: horizontal.json  vertical.json
res/structures/shaft/end/: bottom.json  left.json  right.json  top.json
res/structures/shaft/junction/: all.json  left-top-right.json
res/structures/shaft/turn/: bottom-left.json  bottom-right.json  top-left.json  top-right.json
src/: dynamic_object_pool.hpp  main.cpp  structures.cpp  structures.hpp  tiles.cpp  tiles.hpp  world.cpp  world.hpp  worldgen.cpp  worldgen.hpp
